# concepts

./: CMakeLists.txt  README.md  conanfile.txt
cmake/: Conan.cmake
src/: AppStateItem.h  CMakeLists.txt  concepts.h  main.cpp  state.h
